--- a/public/html/about.html
+++ b/public/html/about.html
@@ -22,7 +22,7 @@
                 <div class="navigation">
                     <div class="nav-items">
                         <div class="nav-close-btn"></div>
-                        <a href="../../index.html">Home</a>
+                        <a href="../../index.htm">Home</a>
                         <a href="data.html">Data</a>
                         <a class="active" href="about.html">About</a>
                         <a href="contact.html">Contact</a>
