--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -70,7 +70,7 @@
           <span class="circle one"></span>
           <span class="circle two"></span>
 
-          <form id="form" autocomplete="off" >
+          <form id="form" onsubmit="sendMail(); reset(); return false;" autocomplete="off" >
             <h3 class="title">Send a Message</h3>
             <div class="input-container">
               <input type="text" name="name" id="name" class="input" />
