--- a/index.htm
+++ b/index.htm
@@ -61,7 +61,7 @@
     </body>
     <footer>
         <p>
-            © Persus 2023. All-right Reserved.
+            © Perseus 2023. All-right Reserved.
         </p>
     </footer>
     <script src="./public/js/script.js"></script>
