--- a/public/html/about.html
+++ b/public/html/about.html
@@ -22,7 +22,7 @@
                 <div class="navigation">
                     <div class="nav-items">
                         <div class="nav-close-btn"></div>
-                        <a href="../../index.htm">Home</a>
+                        <a href="../../index.html">Home</a>
                         <a href="data.html">Data</a>
                         <a class="active" href="about.html">About</a>
                         <a href="contact.html">Contact</a>
@@ -42,7 +42,9 @@
                           <h4><span>Welthungerhilfe</span> (WHH) </h4>
                           <br>
                           <p>Welthungerhilfe (WHH)/ registered as German Agro Action (GAA) in Ethiopia is one of the biggest private development organizations in Germany with development and relief aid projects in more than 40 countries. Non-profit, non-political and non-denominational organization that works under the leadership of an honorary board and the patronage of the German Federal President. GAA runs a Regional Office for the Horn of Africa, based in Addis Ababa, Ethiopia and is successfully operating in the country since 1972. GAA Ethiopia Country Office has a plan to implementing district wide WASH System Strengthening projects in different parts of the country. Currently, piloting of WASH System approach has been on going in few districts.</p>
-                      </div>
+                          <img src="../images/scroll.png" alt="imge" >
+                          <h6>Scroll Down</h6>
+                        </div>
                   </div>
                   <div class="about-img2">
                     <img src="../images/water-1-1.png" alt="about">
@@ -86,7 +88,7 @@
     </body>
     <footer>
       <p>
-          © Perseus 2023. All-right Reserved.
+          © Persus 2023. All-right Reserved.
       </p>
   </footer>
 </html>
