--- a/public/html/contact.html
+++ b/public/html/contact.html
@@ -105,7 +105,7 @@
   </body>
   <footer>
     <p>
-        © Persus 2023. All-right Reserved.
+        © Perseus 2023. All-right Reserved.
     </p>
   </footer> 
 </html>
