--- a/public/html/about.html
+++ b/public/html/about.html
@@ -88,7 +88,7 @@
     </body>
     <footer>
       <p>
-          © Persus 2023. All-right Reserved.
+          © Perseus 2023. All-right Reserved.
       </p>
   </footer>
 </html>
